--- a/nexter/sass/_story.scss
+++ b/nexter/sass/_story.scss
@@ -1,11 +1,28 @@
 .story {
   &__pictures {
     background-color: $color-primary;
-    grid-column: full-start /col-end 4;
+    grid-column: full-start / col-end 4;
   }
 
   &__content {
     background-color: $color-grey-light-1;
-    grid-column: col-start 5 /full-end;
+    grid-column: col-start 5 / full-end;
+
+    padding: 6rem 8vw;
+
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: flex-start;
+
+    display: grid;
+    align-content: center;
+    justify-items: start;
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+    margin-bottom: 4rem;
   }
 }
