--- a/nexter/sass/_features.scss
+++ b/nexter/sass/_features.scss
@@ -3,13 +3,25 @@
 
   margin: 15rem 0;
 
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem;
-  align-items: start;
+  @supports(display: grid) {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 6rem;
+    align-items: start;
+  }
 }
 
 .feature {
+
+  float: left;
+  width: 33.3333%;
+  margin-bottom: 6rem;
+
+  @supports(display: grid) {
+    width: auto;
+    margin-bottom: 0;
+  }
+
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
